week10/node
ben@ubuntu:~/Desktop$ mkdir week10
ben@ubuntu:~/Desktop$ cd week10
ben@ubuntu:~/Desktop/week10$ cp ../week9/ch09.h ch10.h
ben@ubuntu:~/Desktop/week10$ ls
ch10.h
ben@ubuntu:~/Desktop/week10$ vi 10-1.c
ben@ubuntu:~/Desktop/week10$ gcc 10-1.c -o 10-1
ben@ubuntu:~/Desktop/week10$ ./10-1
child2 :pid=3616,ppid=3614
child 1 :pid=3615,ppid=3614
parent :pid=3614,r1=3615,r2=3616
ben@ubuntu:~/Desktop/week10$ cp 10-1.c 10-2.c
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c: In function ‘main’:
10-2.c:49:1: error: expected declaration or statement at end of input
 }
 ^
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
child2 :pid=3686,ppid=3684
chilD3 :pid=3687,ppid=3684
parent :pid=3684,r1=3685,r2=3686,r3=3687
ben@ubuntu:~/Desktop/week10$ child 1 :pid=3685,ppid=3684

ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
chilD3 :pid=3697,ppid=3694
child 1 :pid=3695,ppid=3694
child2 :pid=3696,ppid=3694
parent :pid=3694,r1=3695,r2=3696,r3=3697
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
chilD3 :pid=3707,ppid=3704
child 1 :pid=3705,ppid=3704
child2 :pid=3706,ppid=3704
parent :pid=3704,r1=3705,r2=3706,r3=3707
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c: In function ‘main’:
10-2.c:15:11: error: ‘O’ undeclared (first use in this function)
   if(r1_1<O)
           ^
10-2.c:15:11: note: each undeclared identifier is reported only once for each function it appears in
10-2.c:58:64: error: ‘r3’ undeclared (first use in this function); did you mean ‘r2’?
     printf("parent :pid=%d,r1=%d,r2=%d,r3=%d\n",getpid(),r1,r2,r3);
                                                                ^~
                                                                r2
10-2.c: At top level:
10-2.c:63:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
ben@ubuntu:~/Desktop/week10$ child2 :pid=3729,ppid=1
child 1 :pid=3728,ppid=1
parent :pid=3730,r1=0,r2=573749040,r1_1=0
parent :pid=3728,r1=0,r2=573749040,r1_1=0

ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c: In function ‘main’:
10-2.c:22:57: error: expected ‘)’ before ‘;’ token
    printf("child 11 pid=%d,ppid=%d\n",getpid(),getppid();
                                                         ^
10-2.c:24:3: error: expected ‘;’ before ‘}’ token
   }
   ^
10-2.c:68:2: error: expected declaration or statement at end of input
  }
  ^
ben@ubuntu:~/Desktop/week10$ vim 10-2.c

ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
10-2.c: In function ‘main’:
10-2.c:68:2: error: expected declaration or statement at end of input
  }
  ^
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
child3 :pid=3776,ppid=3773
child2 :pid=3775,ppid=3773
child 11 pid=3777,ppid=3774
child 1 :pid=3774,ppid=3773,r11=3777
parent :pid=3773,r1=3774,r2=3775,r1_1=3776
ben@ubuntu:~/Desktop/week10$ vim 10-2.c
ben@ubuntu:~/Desktop/week10$ gcc 10-2.c -o 10-2
ben@ubuntu:~/Desktop/week10$ ./10-2
child r3 :pid=3787,ppid=3784
child r2 :pid=3786,ppid=3784
child 11 pid=3788,ppid=3785
child r1 :pid=3785,ppid=3784,r11=3788
parent :pid=3784,r1=3785,r2=3786,r3=3787
ben@ubuntu:~/Desktop/week10$ vi test.c
ben@ubuntu:~/Desktop/week10$ gcc test.c -o test
ben@ubuntu:~/Desktop/week10$ ./test
test :pid=3796,ppid=3446
argv[0]=./test
ben@ubuntu:~/Desktop/week10$ ./test hello world
test :pid=3797,ppid=3446
argv[0]=./test
argv[1]=hello
argv[2]=world
^C
ben@ubuntu:~/Desktop/week10$ vi 10-3.c
ben@ubuntu:~/Desktop/week10$ gcc 10-3.c -o 10-3
ben@ubuntu:~/Desktop/week10$ ./10-3
10-4:pid=3804,ppid=3446
test :pid=3804,ppid=3446
argv[0]=./test
argv[1]=hello
argv[2]=world
ben@ubuntu:~/Desktop/week10$ vi test.c
ben@ubuntu:~/Desktop/week10$ gcc test.c -o test
ben@ubuntu:~/Desktop/week10$ gcc 10-3.c -o 10-3
ben@ubuntu:~/Desktop/week10$ cp 10-3.c 10-5.c
ben@ubuntu:~/Desktop/week10$ vi 10-5.c
ben@ubuntu:~/Desktop/week10$ gcc 10-5.c -o 10-5
ben@ubuntu:~/Desktop/week10$ ./10-5
10-5:pid=3824,ppid=3446
test :pid=3826,ppid=3825
argv[0]=./test
argv[1]=hello
argv[2]=world
argv[3]=2020
argv[4]=11
argv[5]=23
After calling!
ben@ubuntu:~/Desktop/week10$ cat test.c
#include"ch10.h"
int main(int argc,char **argv)
{
	int i;
	printf("test :pid=%d,ppid=%d\n",getpid(),getppid());
	for(i=0;i<argc;i++)
	{
		printf("argv[%d]=%s\n",i,argv[i]);
	}
	sleep(100);
	return 0;
}



include"ch10.h"
int main()
{
	int r1,r2;
	r1=fork();
	if(r1<0)
	{
		perror("fork1 failed!\n");
		exit(-1);
	}
	else if (r1==0)
	{
		printf("child 1 :pid=%d,ppid=%d\n",getpid(),getppid());
		exit(0);
	}
	else
	{
		r2=fork();
		if(r2<0)
		{
			perror("fork2 failed!\n");
			exit(-1);
		}
		else if(r2==0)
		{
			printf("child2 :pid=%d,ppid=%d\n",getpid(),getppid());
			exit(0);
		}
		else
		{
			wait(NULL);
			wait(NULL);
			printf("parent :pid=%d,r1=%d,r2=%d\n",getpid(),r1,r2);
			return 0;
		}
	}
}
#include"ch10.h"
int main()
{
	int r1,r2,r3;
	r1=fork();
	if(r1<0)
	{
		perror("fork1 failed!\n");
		exit(-1);
	}
	else if (r1==0)
	{
		int r11;
		r11=fork();
		if(r11<0)
		{
			perror("r11 fork failed!\n");
			exit(-1);
		}
		else if(r11==0)
		{
			printf("child 11 pid=%d,ppid=%d\n",getpid(),getppid());
			exit(0);
		}
		else{
		wait(NULL);
		printf("child r1 :pid=%d,ppid=%d,r11=%d\n",getpid(),getppid(),r11);
		exit(0);
		}
	}
	else
	{
		r2=fork();
		if(r2<0)
		{
			perror("fork2 failed!\n");
			exit(-1);
		}
		else if(r2==0)
		{
			wait(NULL);
			printf("child r2 :pid=%d,ppid=%d\n",getpid(),getppid());
			exit(0);
		}
		else
		{
			r3=fork();
			if(r3<0)
                	{
                        	perror("fork3 failed!\n");
                        	exit(-1);
                	}
                	else if(r3==0)
			{
                        	wait(NULL);
				printf("child r3 :pid=%d,ppid=%d\n",getpid(),getppid());
                        	exit(0);
                	}
			else
			{
				wait(NULL);
				wait(NULL);
				wait(NULL);
				printf("parent :pid=%d,r1=%d,r2=%d,r3=%d\n",getpid(),r1,r2,r3);
				return 0;
			}
		}
	}
}
#include"ch10.h"
int main()
{
	int r;
	printf("10-4:pid=%d,ppid=%d\n",getpid(),getppid());
	r=execl("./test","./test","hello","world",NULL);
	if(r==-1)
	{
		perror("execl failed!\n");
		exit(-1);
	}
	printf("After calling!\n");
	return 0;
}
#include"ch10.h"
int main()
{
	int r;
	printf("10-5:pid=%d,ppid=%d\n",getpid(),getppid());
	system("./test hello world 2020 11 23\n");
	//r=execl("./test","./test","hello","world",NULL);
	/*if(r==-1)
	{
		perror("execl failed!\n");
		exit(-1);
	}*/
	printf("After calling!\n");
	return 0;
}




ben@ubuntu:~/Desktop/week10$ vi 10-6.c
ben@ubuntu:~/Desktop/week10$ gcc 10-6.c -o 10-6
ben@ubuntu:~/Desktop/week10$ ./10-6
10-6 child:pid=3865 ,ppid=3864
test :pid=3865,ppid=3864
argv[0]=./test
argv[1]=hello
argv[2]=world
10-6 : r=3865,status=0
ben@ubuntu:~/Desktop/week10$ vi test.c
ben@ubuntu:~/Desktop/week10$ gcc test.c -o test
ben@ubuntu:~/Desktop/week10$ gcc 10-6.c -o 10-6
ben@ubuntu:~/Desktop/week10$ ./10-6
10-6 child:pid=3926 ,ppid=3925
test :pid=3926,ppid=3925
argv[0]=./test
argv[1]=hello
argv[2]=world
10-6 : r=3926,status=99
ben@ubuntu:~/Desktop/week10$ cat 10-6.c
#include"ch10.h"
int main()
{
	pid_t pid;
	pid=fork();
	if(pid<0)
	{
	
		perror("fork failed!\n");
		exit(-1);
	}
	else if(pid==0)
	{
		printf("10-6 child:pid=%d ,ppid=%d\n",getpid(),getppid());
		execl("./test","./test","hello","world",NULL);
		printf("10-6 child end!\n");
		exit(1);
	}
	else
	{
		int r,s;
		r=wait(&s);
		printf("10-6 : r=%d,status=%d\n",r,WEXITSTATUS(s));
		return 0;
	}
}
